# QCI

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: phase3_cmpo_v2_resilience.yaml  phase3_irc_cmpo_ieee123.yaml  phase3_main.yaml  phase3_pglib_case14.yaml  phase3_pglib_case30.yaml  phase3_pglib_case5.yaml  phase3_pglib_case57.yaml  phase3_qci_small.yaml  phase3_sc_cmpo_arpae.yaml  phase3_sc_cmpo_case14.yaml  phase3_sc_cmpo_case30.yaml  phase3_sc_cmpo_ieee123.yaml  phase3_sc_cmpo_ieee123_budget_master_v2.yaml  phase3_sc_cmpo_ieee123_budget_sweep.yaml  phase3_smoke.yaml  phase3_stress.yaml
data/: README.md  README_ARPAE_GO.md
results/: README.md  RESULTS_INDEX.md  cubic_vs_quadratic.csv  design_summary.json  microgrid_design.csv  model_stats.csv  phase2_headlines.md  phase2_paper.md  phase3_resource_estimate.md  run_manifest.json  scaling_results.csv  scenario_results.csv  submission_key_findings.md  submission_limitations.md  submission_tables.md  summary_metrics.csv
scripts/: build_phase2_paper.py  export_qci_payloads.py  fetch_pglib_benchmarks.py  phase3_audit_budget_frontier_v1.py  phase3_audit_qci_integer_encoding.py  phase3_audit_qci_modes.py  phase3_build_arpae_sc_cmpo.py  phase3_build_budget_master_v2.py  phase3_build_budgeted_ieee123_payloads.py  phase3_build_hybrid_payloads.py  phase3_build_ieee123_sc_cmpo.py  phase3_build_irc_cmpo.py  phase3_build_irc_cmpo_dataset.py  phase3_build_irc_cmpo_payloads.py  phase3_build_public_benchmark_payloads.py  phase3_build_qci_fit_public_payloads.py  phase3_build_sc_cmpo_payloads.py  (+53 more)
(+4011 files in other folders)
