[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cmpo-qci-phase2"
version = "0.1.0"
description = "Pre-QCi Phase 2 prototype for Dirac-3-ready resilient microgrid optimization"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "matplotlib",
  "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
