[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cmpo-qci-phase2"
version = "0.1.0"
description = "Pre-QCi Phase 2 prototype for Dirac-3-ready resilient microgrid optimization"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "matplotlib",
  "PyYAML",
  "OpenDSSDirect.py==0.9.1",
  "pyomo>=6.10,<7",
  "highspy>=1.15,<2",
  "qci-client==5.0.0",
  "eqc-models==0.20.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
